# Agent_2_Agent

./: .gitignore  git_magentic_agent_executer.py  git_magentic_main.py  pyproject.toml  test_client.py
GitMagenticAgent/: .gitignore  README.md  agent.py  agent_executer.py  client.py  main.py
